<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>GpkgDivisionRuleDlg</class>
 <widget class="QDialog" name="GpkgDivisionRuleDlg">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>538</width>
    <height>431</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>分析就绪型数据包分包规则加载</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="0" colspan="3">
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string/>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>规则文件路径</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLineEdit" name="lineEdit_InputPath"/>
      </item>
      <item row="1" column="1">
       <widget class="QPushButton" name="pushButton_LoadFile">
        <property name="text">
         <string>浏览</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0" colspan="2">
       <widget class="QTableWidget" name="tableWidget_GpkgDivisionRule">
        <column>
         <property name="text">
          <string>包内基础格网最小级别</string>
         </property>
        </column>
        <column>
         <property name="text">
          <string>包内基础格网最大级别</string>
         </property>
        </column>
        <column>
         <property name="text">
          <string>基础分包级别</string>
         </property>
        </column>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0">
    <spacer name="horizontalSpacer">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>485</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="1" column="1">
    <widget class="QPushButton" name="pushButton_OK">
     <property name="text">
      <string>确定</string>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="QPushButton" name="pushButton_Cancel">
     <property name="text">
      <string>取消</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
